# opdocs

./: .gitignore  README.md  pyproject.toml
opdocs/: cli.py
