[tool.poetry]
name = "opdocs"
version = "0.0"
description = "Honza Javorek's way of using 1Password for private documentation"
authors = ["Honza Javorek <honza@junior.guru>"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/honzajavorek/opdocs"

[tool.poetry.scripts]
opdocs = "opdocs.cli:main"

[tool.poetry.dependencies]
python = "~3.12"
click = "8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
